# deepl-grpc

./: .flake8  README.md  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tbump.toml
.github/workflows/: routine-tests.yml
deepl_grpc/: deepl_client.py  deepl_pb2.py  deepl_pb2_grpc.py  deepl_server.py
proto/: deepl.proto
tests/: test_deepl_client.py  test_deepl_grpc.py
